[project]
name = "risk-monitor"
version = "0.1.0"
description = "Local consolidated portfolio risk monitor (Phase 1: Schwab)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
    "pyjwt[crypto]>=2.8",
]
